--- a/Flazzy/Flazzy.csproj
+++ b/Flazzy/Flazzy.csproj
@@ -47,7 +47,9 @@
     <Compile Include="ABC\ABCFile.cs" />
     <Compile Include="ABC\AS3Item.cs" />
     <Compile Include="ABC\ASConstantPool.cs" />
+    <Compile Include="ABC\ASContainer.cs" />
     <Compile Include="ABC\ASInstance.cs" />
+    <Compile Include="ABC\ASItemInfo.cs" />
     <Compile Include="ABC\ASMetadata.cs" />
     <Compile Include="ABC\ASMethod.cs" />
     <Compile Include="ABC\ASMethodBody.cs" />
@@ -57,11 +59,15 @@
     <Compile Include="ABC\ASClass.cs" />
     <Compile Include="ABC\ASParameter.cs" />
     <Compile Include="ABC\ASScript.cs" />
+    <Compile Include="ABC\ASTrait.cs" />
+    <Compile Include="ABC\Enums\ClassFlags.cs" />
     <Compile Include="ABC\Enums\ConstantKind.cs" />
     <Compile Include="ABC\Enums\MethodFlags.cs" />
     <Compile Include="ABC\Enums\MultinameKind.cs" />
     <Compile Include="ABC\Enums\NamespaceKind.cs" />
     <Compile Include="ABC\ConstantItem.cs" />
+    <Compile Include="ABC\Enums\TraitAttributes.cs" />
+    <Compile Include="ABC\Enums\TraitKind.cs" />
     <Compile Include="CompressionKind.cs" />
     <Compile Include="Compression\Ionic\Crc\CRC32.cs" />
     <Compile Include="Compression\Ionic\Zlib\Deflate.cs" />
