--- a/Flazzy.Example/Flazzy.Example.csproj
+++ b/Flazzy.Example/Flazzy.Example.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\ConsoleEx.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Flazzy\Flazzy.csproj">
