The infamouse .csproj commit, can't commit without this, otherwise the new files don't really exists if it isn't up-to-date...

--- a/Flazzy/Flazzy.csproj
+++ b/Flazzy/Flazzy.csproj
@@ -221,20 +221,20 @@
     <Compile Include="ABC\Traits\IMethodGSTrait.cs" />
     <Compile Include="ABC\Traits\ISlotConstantTrait.cs" />
     <Compile Include="CompressionKind.cs" />
-    <Compile Include="Compression\Ionic\Crc\CRC32.cs" />
-    <Compile Include="Compression\Ionic\Zlib\Deflate.cs" />
-    <Compile Include="Compression\Ionic\Zlib\DeflateStream.cs" />
-    <Compile Include="Compression\Ionic\Zlib\GZipStream.cs" />
-    <Compile Include="Compression\Ionic\Zlib\Inflate.cs" />
-    <Compile Include="Compression\Ionic\Zlib\InfTree.cs" />
-    <Compile Include="Compression\Ionic\Zlib\ParallelDeflateOutputStream.cs" />
-    <Compile Include="Compression\Ionic\Zlib\Tree.cs" />
-    <Compile Include="Compression\Ionic\Zlib\Zlib.cs" />
-    <Compile Include="Compression\Ionic\Zlib\ZlibBaseStream.cs" />
-    <Compile Include="Compression\Ionic\Zlib\ZlibCodec.cs" />
-    <Compile Include="Compression\Ionic\Zlib\ZlibConstants.cs" />
-    <Compile Include="Compression\Ionic\Zlib\ZlibStream.cs" />
-    <Compile Include="Compression\Zlib.cs" />
+    <Compile Include="Compression\ComponentAce\Adler32.cs" />
+    <Compile Include="Compression\ComponentAce\Deflate.cs" />
+    <Compile Include="Compression\ComponentAce\InfBlocks.cs" />
+    <Compile Include="Compression\ComponentAce\InfCodes.cs" />
+    <Compile Include="Compression\ComponentAce\Inflate.cs" />
+    <Compile Include="Compression\ComponentAce\InfTree.cs" />
+    <Compile Include="Compression\ComponentAce\StaticTree.cs" />
+    <Compile Include="Compression\ComponentAce\SupportClass.cs" />
+    <Compile Include="Compression\ComponentAce\Tree.cs" />
+    <Compile Include="Compression\ComponentAce\ZInputStream.cs" />
+    <Compile Include="Compression\ComponentAce\ZlibConstants.cs" />
+    <Compile Include="Compression\ComponentAce\ZOutputStream.cs" />
+    <Compile Include="Compression\ComponentAce\ZStream.cs" />
+    <Compile Include="Compression\ZLIB.cs" />
     <Compile Include="Internals\FlashTools.cs" />
     <Compile Include="Tags\DefineBinaryDataTag.cs" />
     <Compile Include="Tags\DefineBitsLossless2Tag.cs" />
