Ported Flazzy to .NET Standard 2.0

--- a/Flazzy/Flazzy.csproj
+++ b/Flazzy/Flazzy.csproj
@@ -1,284 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{84D3802E-16AA-4DD1-906C-3D4AEE5FF8C6}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Flazzy</RootNamespace>
-    <AssemblyName>Flazzy</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <UpdateAssemblyVersion>True</UpdateAssemblyVersion>
-    <UpdateAssemblyFileVersion>True</UpdateAssemblyFileVersion>
-    <UpdateAssemblyInfoVersion>False</UpdateAssemblyInfoVersion>
-    <AssemblyVersionSettings>None.IncrementOnDemandWithReset.None.None</AssemblyVersionSettings>
-    <AssemblyFileVersionSettings>None.IncrementOnDemandWithReset.None.None</AssemblyFileVersionSettings>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <LangVersion>6</LangVersion>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget></PlatformTarget>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>6</LangVersion>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.4.0" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ABC\ABCFile.cs" />
-    <Compile Include="ABC\AS3Item.cs" />
-    <Compile Include="ABC\ASClass.cs" />
-    <Compile Include="ABC\ASConstantPool.cs" />
-    <Compile Include="ABC\ASContainer.cs" />
-    <Compile Include="ABC\ASException.cs" />
-    <Compile Include="ABC\ASInstance.cs" />
-    <Compile Include="ABC\ASItemInfo.cs" />
-    <Compile Include="ABC\ASMetadata.cs" />
-    <Compile Include="ABC\ASMethod.cs" />
-    <Compile Include="ABC\ASMethodBody.cs" />
-    <Compile Include="ABC\ASMultiname.cs" />
-    <Compile Include="ABC\ASNamespace.cs" />
-    <Compile Include="ABC\ASNamespaceSet.cs" />
-    <Compile Include="ABC\ASParameter.cs" />
-    <Compile Include="ABC\ASScript.cs" />
-    <Compile Include="ABC\ASTrait.cs" />
-    <Compile Include="ABC\AVM2\ASCode.cs" />
-    <Compile Include="ABC\AVM2\ASMachine.cs" />
-    <Compile Include="ABC\AVM2\Instructions\ApplyTypeIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\AddIIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\AddIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\Computation.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\DecrementIIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\DecrementIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\DivideIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\EqualsIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\GreaterEqualsIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\GreaterThanIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\IncrementIIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\IncrementIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\InIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\IsTypeLateIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\LessEqualsIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\LessThanIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\ModuloIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\MultiplyIIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\MultiplyIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\NegateIIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\NegateIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\StrictEqualsIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\SubtractIIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Arithmetic\SubtractIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\ASInstruction.cs" />
-    <Compile Include="ABC\AVM2\Instructions\AsTypeIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\AsTypeLateIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Bit Manipulation\BitAndIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Bit Manipulation\BitNotIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Bit Manipulation\BitOrIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Bit Manipulation\BitXorIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Bit Manipulation\LShiftIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Bit Manipulation\RShiftIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Bit Manipulation\URShiftIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\CallIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\CallPropertyIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\CallPropLexIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\CallPropVoidIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\CallSuperIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\CallSuperVoidIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\CheckFilterIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\ConstructIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\ConstructPropIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\ConstructSuperIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\IfEqualIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\IfFalseIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\IfGreaterEqualIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\IfGreaterThanIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\IfLessEqualIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\IfLessThanIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\IfNotEqualIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\IfNotGreaterEqualIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\IfNotGreaterThanIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\IfNotLessEqualIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\IfNotLessThanIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\IfStrictEqualIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\IfStrictNotEqualIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\IfTrueIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\Jumper.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Control Transfer\JumpIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\DebugFileIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\DebugIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\DebugLineIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\DeletePropertyIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\DupIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\DxnsLateIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Enums\OPCode.cs" />
-    <Compile Include="ABC\AVM2\Instructions\EscXAttrIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\EscXElemIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\FindPropertyIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\FindPropStrictIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\GetDescendantsIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\GetGlobalScopeIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\GetLexIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\GetPropertyIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\GetScopeObjectIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\GetSlotIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\GetSuperIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\HasNext2Ins.cs" />
-    <Compile Include="ABC\AVM2\Instructions\HasNextIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\InitPropertyIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\InstanceOfIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\LabelIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\LookUpSwitchIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\NewActivationIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\NewArrayIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\NewCatchIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\NewClassIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\NewFunctionIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\NewObjectIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\NextNameIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\NextValueIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\NopIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\NotIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\PopIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\PopScopeIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\PushScopeIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\PushUndefinedIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\PushWithIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\DecLocalIIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\DecLocalIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\GetLocal0Ins.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\GetLocal1Ins.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\GetLocal2Ins.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\GetLocal3Ins.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\GetLocalIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\IncLocalIIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\IncLocalIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\KillIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\Local.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\SetLocal0Ins.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\SetLocal1Ins.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\SetLocal2Ins.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\SetLocal3Ins.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Register Management\SetLocalIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\ReturnValueIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\ReturnVoidIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\SetPropertyIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\SetSlotIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\SetSuperIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Stack Management\Primitive.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Stack Management\PushByteIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Stack Management\PushDoubleIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Stack Management\PushFalseIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Stack Management\PushIntIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Stack Management\PushNaNIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Stack Management\PushNullIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Stack Management\PushShortIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Stack Management\PushStringIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Stack Management\PushTrueIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Stack Management\PushUIntIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\SwapIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\ThrowIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Type Conversion\CoerceAIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Type Conversion\CoerceIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Type Conversion\CoerceSIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Type Conversion\ConvertBIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Type Conversion\ConvertDIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Type Conversion\ConvertIIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Type Conversion\ConvertOIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Type Conversion\ConvertSIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\Type Conversion\ConvertUIns.cs" />
-    <Compile Include="ABC\AVM2\Instructions\TypeOfIns.cs" />
-    <Compile Include="ABC\ConstantItem.cs" />
-    <Compile Include="ABC\Enums\ClassFlags.cs" />
-    <Compile Include="ABC\Enums\ConstantKind.cs" />
-    <Compile Include="ABC\Enums\MethodFlags.cs" />
-    <Compile Include="ABC\Enums\MultinameKind.cs" />
-    <Compile Include="ABC\Enums\NamespaceKind.cs" />
-    <Compile Include="ABC\Enums\TraitAttributes.cs" />
-    <Compile Include="ABC\Enums\TraitKind.cs" />
-    <Compile Include="ABC\Multinames\IMultiname.cs" />
-    <Compile Include="ABC\Multinames\IMultinameL.cs" />
-    <Compile Include="ABC\Multinames\IQName.cs" />
-    <Compile Include="ABC\Multinames\IRTQName.cs" />
-    <Compile Include="ABC\Traits\IClassTrait.cs" />
-    <Compile Include="ABC\Traits\IFunctionTrait.cs" />
-    <Compile Include="ABC\Traits\IMethodGSTrait.cs" />
-    <Compile Include="ABC\Traits\ISlotConstantTrait.cs" />
-    <Compile Include="CompressionKind.cs" />
-    <Compile Include="Compression\ComponentAce\Adler32.cs" />
-    <Compile Include="Compression\ComponentAce\Deflate.cs" />
-    <Compile Include="Compression\ComponentAce\InfBlocks.cs" />
-    <Compile Include="Compression\ComponentAce\InfCodes.cs" />
-    <Compile Include="Compression\ComponentAce\Inflate.cs" />
-    <Compile Include="Compression\ComponentAce\InfTree.cs" />
-    <Compile Include="Compression\ComponentAce\StaticTree.cs" />
-    <Compile Include="Compression\ComponentAce\SupportClass.cs" />
-    <Compile Include="Compression\ComponentAce\Tree.cs" />
-    <Compile Include="Compression\ComponentAce\ZInputStream.cs" />
-    <Compile Include="Compression\ComponentAce\ZlibConstants.cs" />
-    <Compile Include="Compression\ComponentAce\ZOutputStream.cs" />
-    <Compile Include="Compression\ComponentAce\ZStream.cs" />
-    <Compile Include="Compression\LZMA.cs" />
-    <Compile Include="Compression\SevenZip\Common\CRC.cs" />
-    <Compile Include="Compression\SevenZip\Compress\LZMA\LzmaBase.cs" />
-    <Compile Include="Compression\SevenZip\Compress\LZMA\LzmaDecoder.cs" />
-    <Compile Include="Compression\SevenZip\Compress\LZMA\LzmaEncoder.cs" />
-    <Compile Include="Compression\SevenZip\Compress\LZ\IMatchFinder.cs" />
-    <Compile Include="Compression\SevenZip\Compress\LZ\LzBinTree.cs" />
-    <Compile Include="Compression\SevenZip\Compress\LZ\LzInWindow.cs" />
-    <Compile Include="Compression\SevenZip\Compress\LZ\LzOutWindow.cs" />
-    <Compile Include="Compression\SevenZip\Compress\RangeCoder\RangeCoder.cs" />
-    <Compile Include="Compression\SevenZip\Compress\RangeCoder\RangeCoderBit.cs" />
-    <Compile Include="Compression\SevenZip\Compress\RangeCoder\RangeCoderBitTree.cs" />
-    <Compile Include="Compression\SevenZip\ICoder.cs" />
-    <Compile Include="Compression\ZLIB.cs" />
-    <Compile Include="FlashItem.cs" />
-    <Compile Include="Internals\FlashTools.cs" />
-    <Compile Include="IO\FlashReader.cs" />
-    <Compile Include="IO\FlashWriter.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Records\FrameRecord.cs" />
-    <Compile Include="Records\HeaderRecord.cs" />
-    <Compile Include="Records\RectangeRecord.cs" />
-    <Compile Include="ShockwaveFlash.cs" />
-    <Compile Include="Tags\DefineBinaryDataTag.cs" />
-    <Compile Include="Tags\DefineBitsLossless2Tag.cs" />
-    <Compile Include="Tags\DefineFontNameTag.cs" />
-    <Compile Include="Tags\DefineSoundTag.cs" />
-    <Compile Include="Tags\DoABCTag.cs" />
-    <Compile Include="Tags\EndTag.cs" />
-    <Compile Include="Tags\Enums\FlashEdition.cs" />
-    <Compile Include="Tags\Enums\FlashProduct.cs" />
-    <Compile Include="Tags\Enums\TagKind.cs" />
-    <Compile Include="Tags\ExportAssetsTag.cs" />
-    <Compile Include="Tags\FileAttributesTag.cs" />
-    <Compile Include="Tags\FrameLabelTag.cs" />
-    <Compile Include="Tags\ProductInfoTag.cs" />
-    <Compile Include="Tags\ScriptLimitsTag.cs" />
-    <Compile Include="Tags\SetBackgroundColorTag.cs" />
-    <Compile Include="Tags\ShowFrameTag.cs" />
-    <Compile Include="Tags\SymbolClassTag.cs" />
-    <Compile Include="Tags\TagItem.cs" />
-    <Compile Include="Tags\UnknownTag.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
