--- a/Flazzy/Flazzy.csproj
+++ b/Flazzy/Flazzy.csproj
@@ -5,4 +5,22 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<Version>0.1.0</Version>
+		<Title>Flazzy</Title>
+		<PackageId>Hypo.$(AssemblyName)</PackageId>
+		<Authors>ArachisH</Authors>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryUrl>https://github.com/ArachisH/Flazzy</RepositoryUrl>
+		<Description>.NET library for [dis]assembling shockwave flash files(swf).</Description>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
+
 </Project>
